[package]
name = "insomnia"
version = "0.1.0"
authors = ["Ben Merritt <blm768@gmail.com>"]
edition = "2018"

[dependencies]
enumset = "^0.4.5"

[target.'cfg(target_os = "linux")'.dependencies]
dbus = "0.8"

[target.'cfg(target_os = "linux")'.dependencies.logind-dbus]
version = "0.1"
path = "../logind-dbus"

[target.'cfg(target_os = "windows")'.dependencies.winapi]
version = "^0.3.8"
features = ["errhandlingapi", "impl-default", "handleapi", "winbase", "winnt"]
