[package]
name = "insomnia"
description = "A library for inhibiting automatic power management on multiple platforms"
version = "0.1.0-alpha1"
authors = ["Ben Merritt <blm768@gmail.com>"]
edition = "2018"

readme = "README.md"
repository = "https://github.com/blm768/insomnia/"
license = "MIT OR Apache-2.0"

[dependencies]
enumset = "^0.4.5"

[target.'cfg(target_os = "linux")'.dependencies]
dbus = "0.8"

[target.'cfg(target_os = "windows")'.dependencies.winapi]
version = "^0.3.8"
features = ["errhandlingapi", "impl-default", "handleapi", "winbase", "winnt"]
