[package]
name = "insomnia"
description = "A library for inhibiting automatic power management on multiple platforms"
version = "0.1.0"
authors = ["Ben Merritt <blm768@gmail.com>"]
edition = "2018"

readme = "README.md"
repository = "https://github.com/blm768/insomnia/"
license = "MIT OR Apache-2.0"

[dependencies]
enumset = "^1.0"

[target.'cfg(target_os = "linux")'.dependencies]
dbus = "0.9"

[target.'cfg(target_os = "windows")'.dependencies.winapi]
version = "^0.3.8"
features = [
    "errhandlingapi",
    "impl-default",
    "handleapi",
    "minwinbase",
    "minwindef",
    "winbase",
    "winnt",
]
